welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
do{
	if(isFacingTrail() == true){
		avance();prin();
	}else{
		gauche();isFacingTrail();
	}	
}while(!estSurBiscuit)
}
def isFacingTrail():Boolean = {
var test = false;
if(!estFaceMur){
	avance();
	if(getCouleurSol() == Color.green){
		test = true;recule();
	}else{
		test = false;recule();
	}
}else{
		test = false;
}
 return test;   
}     
def print() {baisseBrosse();leveBrosse()}